via-bnfc/Ast/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Ast/Par.y
-----------------------------------------------------------------------------

state 124 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pAst -> Ast                                 (0)
	%start_pListDecl -> ListDecl                       (1)
	%start_pListStatement -> ListStatement             (2)
	%start_pListExpr -> ListExpr                       (3)
	%start_pListIdent -> ListIdent                     (4)
	%start_pRoutineDecl -> RoutineDecl                 (5)
	%start_pDecl -> Decl                               (6)
	%start_pStatement -> Statement                     (7)
	%start_pExpr6 -> Expr6                             (8)
	%start_pExpr5 -> Expr5                             (9)
	%start_pExpr4 -> Expr4                             (10)
	%start_pExpr3 -> Expr3                             (11)
	%start_pExpr2 -> Expr2                             (12)
	%start_pExpr1 -> Expr1                             (13)
	%start_pExpr -> Expr                               (14)
	Ident -> L_Ident                                   (15)
	Integer -> L_integ                                 (16)
	Ast -> ListDecl                                    (17)
	ListDecl ->                                        (18)
	ListDecl -> Decl                                   (19)
	ListDecl -> Decl ';' ListDecl                      (20)
	ListStatement ->                                   (21)
	ListStatement -> Statement                         (22)
	ListStatement -> Statement ';' ListStatement       (23)
	ListExpr ->                                        (24)
	ListExpr -> Expr                                   (25)
	ListExpr -> Expr ',' ListExpr                      (26)
	ListIdent ->                                       (27)
	ListIdent -> Ident                                 (28)
	ListIdent -> Ident ',' ListIdent                   (29)
	RoutineDecl -> 'def' Ident '(' ListIdent ')' ':' '{' ListDecl '}'   (30)
	Decl -> 'return' Expr                              (31)
	Decl -> Statement                                  (32)
	Decl -> RoutineDecl                                (33)
	Statement -> Ident '=' Expr                        (34)
	Statement -> Ident '(' ListExpr ')'                (35)
	Statement -> 'while' '(' Expr ')' ':' '{' ListDecl '}'   (36)
	Statement -> 'for' Ident 'in' 'range' '(' Expr ',' Expr ')' ':' '{' ListDecl '}'   (37)
	Statement -> 'if' Expr ':' '{' ListDecl '}'        (38)
	Statement -> 'if' Expr ':' '{' ListDecl '}' ';' 'else' ':' '{' ListDecl '}'   (39)
	Expr6 -> Integer                                   (40)
	Expr6 -> Ident                                     (41)
	Expr6 -> Ident '(' ListExpr ')'                    (42)
	Expr5 -> '-' Expr6                                 (43)
	Expr5 -> Expr6                                     (44)
	Expr5 -> '(' Expr ')'                              (45)
	Expr4 -> 'not' Expr5                               (46)
	Expr4 -> Expr5                                     (47)
	Expr3 -> Expr3 '*' Expr4                           (48)
	Expr3 -> Expr3 '/' Expr4                           (49)
	Expr3 -> Expr3 '%' Expr4                           (50)
	Expr3 -> Expr4                                     (51)
	Expr2 -> Expr2 '+' Expr3                           (52)
	Expr2 -> Expr2 '-' Expr3                           (53)
	Expr2 -> Expr3                                     (54)
	Expr1 -> Expr1 'and' Expr2                         (55)
	Expr1 -> Expr1 'or' Expr2                          (56)
	Expr1 -> Expr1 'xor' Expr2                         (57)
	Expr1 -> Expr2                                     (58)
	Expr -> Expr '<' Expr1                             (59)
	Expr -> Expr '>' Expr1                             (60)
	Expr -> Expr '<=' Expr1                            (61)
	Expr -> Expr '>=' Expr1                            (62)
	Expr -> Expr '==' Expr1                            (63)
	Expr -> Expr '!=' Expr1                            (64)
	Expr -> Expr1                                      (65)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	','            { PT _ (TS _ 7) }
	'-'            { PT _ (TS _ 8) }
	'/'            { PT _ (TS _ 9) }
	':'            { PT _ (TS _ 10) }
	';'            { PT _ (TS _ 11) }
	'<'            { PT _ (TS _ 12) }
	'<='           { PT _ (TS _ 13) }
	'='            { PT _ (TS _ 14) }
	'=='           { PT _ (TS _ 15) }
	'>'            { PT _ (TS _ 16) }
	'>='           { PT _ (TS _ 17) }
	'and'          { PT _ (TS _ 18) }
	'def'          { PT _ (TS _ 19) }
	'else'         { PT _ (TS _ 20) }
	'for'          { PT _ (TS _ 21) }
	'if'           { PT _ (TS _ 22) }
	'in'           { PT _ (TS _ 23) }
	'not'          { PT _ (TS _ 24) }
	'or'           { PT _ (TS _ 25) }
	'range'        { PT _ (TS _ 26) }
	'return'       { PT _ (TS _ 27) }
	'while'        { PT _ (TS _ 28) }
	'xor'          { PT _ (TS _ 29) }
	'{'            { PT _ (TS _ 30) }
	'}'            { PT _ (TS _ 31) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pAst     rule  0
	%start_pListDecl rule  1
	%start_pListStatement rule  2
	%start_pListExpr rule  3
	%start_pListIdent rule  4
	%start_pRoutineDecl rule  5
	%start_pDecl    rule  6
	%start_pStatement rule  7
	%start_pExpr6   rule  8
	%start_pExpr5   rule  9
	%start_pExpr4   rule  10
	%start_pExpr3   rule  11
	%start_pExpr2   rule  12
	%start_pExpr1   rule  13
	%start_pExpr    rule  14
	Ident           rule  15
	Integer         rule  16
	Ast             rule  17
	ListDecl        rules 18, 19, 20
	ListStatement   rules 21, 22, 23
	ListExpr        rules 24, 25, 26
	ListIdent       rules 27, 28, 29
	RoutineDecl     rule  30
	Decl            rules 31, 32, 33
	Statement       rules 34, 35, 36, 37, 38, 39
	Expr6           rules 40, 41, 42
	Expr5           rules 43, 44, 45
	Expr4           rules 46, 47
	Expr3           rules 48, 49, 50, 51
	Expr2           rules 52, 53, 54
	Expr1           rules 55, 56, 57, 58
	Expr            rules 59, 60, 61, 62, 63, 64, 65

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pAst -> . Ast                                (rule 0)

	'def'          shift, and enter state 44
	'for'          shift, and enter state 38
	'if'           shift, and enter state 39
	'return'       shift, and enter state 45
	'while'        shift, and enter state 40
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 18

	Ident          goto state 36
	Ast            goto state 55
	ListDecl       goto state 56
	RoutineDecl    goto state 41
	Decl           goto state 54
	Statement      goto state 43

State 1

	%start_pListDecl -> . ListDecl                      (rule 1)

	'def'          shift, and enter state 44
	'for'          shift, and enter state 38
	'if'           shift, and enter state 39
	'return'       shift, and enter state 45
	'while'        shift, and enter state 40
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 18

	Ident          goto state 36
	ListDecl       goto state 53
	RoutineDecl    goto state 41
	Decl           goto state 54
	Statement      goto state 43

State 2

	%start_pListStatement -> . ListStatement            (rule 2)

	'for'          shift, and enter state 38
	'if'           shift, and enter state 39
	'while'        shift, and enter state 40
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 21

	Ident          goto state 36
	ListStatement  goto state 51
	Statement      goto state 52

State 3

	%start_pListExpr -> . ListExpr                      (rule 3)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29
	%eof           reduce using rule 24

	Ident          goto state 17
	Integer        goto state 18
	ListExpr       goto state 49
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 50

State 4

	%start_pListIdent -> . ListIdent                    (rule 4)

	L_Ident        shift, and enter state 16
	%eof           reduce using rule 27

	Ident          goto state 47
	ListIdent      goto state 48

State 5

	%start_pRoutineDecl -> . RoutineDecl                (rule 5)

	'def'          shift, and enter state 44

	RoutineDecl    goto state 46

State 6

	%start_pDecl -> . Decl                              (rule 6)

	'def'          shift, and enter state 44
	'for'          shift, and enter state 38
	'if'           shift, and enter state 39
	'return'       shift, and enter state 45
	'while'        shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 36
	RoutineDecl    goto state 41
	Decl           goto state 42
	Statement      goto state 43

State 7

	%start_pStatement -> . Statement                    (rule 7)

	'for'          shift, and enter state 38
	'if'           shift, and enter state 39
	'while'        shift, and enter state 40
	L_Ident        shift, and enter state 16

	Ident          goto state 36
	Statement      goto state 37

State 8

	%start_pExpr6 -> . Expr6                            (rule 8)

	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 35

State 9

	%start_pExpr5 -> . Expr5                            (rule 9)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 34

State 10

	%start_pExpr4 -> . Expr4                            (rule 10)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 33

State 11

	%start_pExpr3 -> . Expr3                            (rule 11)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 32

State 12

	%start_pExpr2 -> . Expr2                            (rule 12)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 31

State 13

	%start_pExpr1 -> . Expr1                            (rule 13)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 30

State 14

	%start_pExpr -> . Expr                              (rule 14)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 25

State 15

	Ident -> . L_Ident                                  (rule 15)

	L_Ident        shift, and enter state 16


State 16

	Ident -> L_Ident .                                  (rule 15)

	'!='           reduce using rule 15
	'%'            reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	','            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	':'            reduce using rule 15
	';'            reduce using rule 15
	'<'            reduce using rule 15
	'<='           reduce using rule 15
	'='            reduce using rule 15
	'=='           reduce using rule 15
	'>'            reduce using rule 15
	'>='           reduce using rule 15
	'and'          reduce using rule 15
	'in'           reduce using rule 15
	'or'           reduce using rule 15
	'xor'          reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 17

	Expr6 -> Ident .                                    (rule 41)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 42)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'('            shift, and enter state 85
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	':'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'and'          reduce using rule 41
	'or'           reduce using rule 41
	'xor'          reduce using rule 41
	'}'            reduce using rule 41
	%eof           reduce using rule 41


State 18

	Expr6 -> Integer .                                  (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	':'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'and'          reduce using rule 40
	'or'           reduce using rule 40
	'xor'          reduce using rule 40
	'}'            reduce using rule 40
	%eof           reduce using rule 40


State 19

	Expr5 -> Expr6 .                                    (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	':'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'and'          reduce using rule 44
	'or'           reduce using rule 44
	'xor'          reduce using rule 44
	'}'            reduce using rule 44
	%eof           reduce using rule 44


State 20

	Expr4 -> Expr5 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	':'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'and'          reduce using rule 47
	'or'           reduce using rule 47
	'xor'          reduce using rule 47
	'}'            reduce using rule 47
	%eof           reduce using rule 47


State 21

	Expr3 -> Expr4 .                                    (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	':'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'and'          reduce using rule 51
	'or'           reduce using rule 51
	'xor'          reduce using rule 51
	'}'            reduce using rule 51
	%eof           reduce using rule 51


State 22

	Expr3 -> Expr3 . '*' Expr4                          (rule 48)
	Expr3 -> Expr3 . '/' Expr4                          (rule 49)
	Expr3 -> Expr3 . '%' Expr4                          (rule 50)
	Expr2 -> Expr3 .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            shift, and enter state 74
	')'            reduce using rule 54
	'*'            shift, and enter state 75
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            shift, and enter state 76
	':'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'and'          reduce using rule 54
	'or'           reduce using rule 54
	'xor'          reduce using rule 54
	'}'            reduce using rule 54
	%eof           reduce using rule 54


State 23

	Expr2 -> Expr2 . '+' Expr3                          (rule 52)
	Expr2 -> Expr2 . '-' Expr3                          (rule 53)
	Expr1 -> Expr2 .                                    (rule 58)

	'!='           reduce using rule 58
	')'            reduce using rule 58
	'+'            shift, and enter state 77
	','            reduce using rule 58
	'-'            shift, and enter state 78
	':'            reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'and'          reduce using rule 58
	'or'           reduce using rule 58
	'xor'          reduce using rule 58
	'}'            reduce using rule 58
	%eof           reduce using rule 58


State 24

	Expr1 -> Expr1 . 'and' Expr2                        (rule 55)
	Expr1 -> Expr1 . 'or' Expr2                         (rule 56)
	Expr1 -> Expr1 . 'xor' Expr2                        (rule 57)
	Expr -> Expr1 .                                     (rule 65)

	'!='           reduce using rule 65
	')'            reduce using rule 65
	','            reduce using rule 65
	':'            reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'and'          shift, and enter state 79
	'or'           shift, and enter state 80
	'xor'          shift, and enter state 81
	'}'            reduce using rule 65
	%eof           reduce using rule 65


State 25

	%start_pExpr -> Expr .                              (rule 14)
	Expr -> Expr . '<' Expr1                            (rule 59)
	Expr -> Expr . '>' Expr1                            (rule 60)
	Expr -> Expr . '<=' Expr1                           (rule 61)
	Expr -> Expr . '>=' Expr1                           (rule 62)
	Expr -> Expr . '==' Expr1                           (rule 63)
	Expr -> Expr . '!=' Expr1                           (rule 64)

	'!='           shift, and enter state 59
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'=='           shift, and enter state 63
	'>'            shift, and enter state 64
	'>='           shift, and enter state 65
	%eof           accept


State 26

	Expr5 -> '(' . Expr ')'                             (rule 45)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 84

State 27

	Expr5 -> '-' . Expr6                                (rule 43)

	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 83

State 28

	Expr4 -> 'not' . Expr5                              (rule 46)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 82

State 29

	Integer -> L_integ .                                (rule 16)

	'!='           reduce using rule 16
	'%'            reduce using rule 16
	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	','            reduce using rule 16
	'-'            reduce using rule 16
	'/'            reduce using rule 16
	':'            reduce using rule 16
	';'            reduce using rule 16
	'<'            reduce using rule 16
	'<='           reduce using rule 16
	'=='           reduce using rule 16
	'>'            reduce using rule 16
	'>='           reduce using rule 16
	'and'          reduce using rule 16
	'or'           reduce using rule 16
	'xor'          reduce using rule 16
	'}'            reduce using rule 16
	%eof           reduce using rule 16


State 30

	%start_pExpr1 -> Expr1 .                            (rule 13)
	Expr1 -> Expr1 . 'and' Expr2                        (rule 55)
	Expr1 -> Expr1 . 'or' Expr2                         (rule 56)
	Expr1 -> Expr1 . 'xor' Expr2                        (rule 57)

	'and'          shift, and enter state 79
	'or'           shift, and enter state 80
	'xor'          shift, and enter state 81
	%eof           accept


State 31

	%start_pExpr2 -> Expr2 .                            (rule 12)
	Expr2 -> Expr2 . '+' Expr3                          (rule 52)
	Expr2 -> Expr2 . '-' Expr3                          (rule 53)

	'+'            shift, and enter state 77
	'-'            shift, and enter state 78
	%eof           accept


State 32

	%start_pExpr3 -> Expr3 .                            (rule 11)
	Expr3 -> Expr3 . '*' Expr4                          (rule 48)
	Expr3 -> Expr3 . '/' Expr4                          (rule 49)
	Expr3 -> Expr3 . '%' Expr4                          (rule 50)

	'%'            shift, and enter state 74
	'*'            shift, and enter state 75
	'/'            shift, and enter state 76
	%eof           accept


State 33

	%start_pExpr4 -> Expr4 .                            (rule 10)

	%eof           accept


State 34

	%start_pExpr5 -> Expr5 .                            (rule 9)

	%eof           accept


State 35

	%start_pExpr6 -> Expr6 .                            (rule 8)

	%eof           accept


State 36

	Statement -> Ident . '=' Expr                       (rule 34)
	Statement -> Ident . '(' ListExpr ')'               (rule 35)

	'('            shift, and enter state 72
	'='            shift, and enter state 73


State 37

	%start_pStatement -> Statement .                    (rule 7)

	%eof           accept


State 38

	Statement -> 'for' . Ident 'in' 'range' '(' Expr ',' Expr ')' ':' '{' ListDecl '}'    (rule 37)

	L_Ident        shift, and enter state 16

	Ident          goto state 71

State 39

	Statement -> 'if' . Expr ':' '{' ListDecl '}'       (rule 38)
	Statement -> 'if' . Expr ':' '{' ListDecl '}' ';' 'else' ':' '{' ListDecl '}'    (rule 39)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 70

State 40

	Statement -> 'while' . '(' Expr ')' ':' '{' ListDecl '}'    (rule 36)

	'('            shift, and enter state 69


State 41

	Decl -> RoutineDecl .                               (rule 33)

	';'            reduce using rule 33
	'}'            reduce using rule 33
	%eof           reduce using rule 33


State 42

	%start_pDecl -> Decl .                              (rule 6)

	%eof           accept


State 43

	Decl -> Statement .                                 (rule 32)

	';'            reduce using rule 32
	'}'            reduce using rule 32
	%eof           reduce using rule 32


State 44

	RoutineDecl -> 'def' . Ident '(' ListIdent ')' ':' '{' ListDecl '}'    (rule 30)

	L_Ident        shift, and enter state 16

	Ident          goto state 68

State 45

	Decl -> 'return' . Expr                             (rule 31)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 67

State 46

	%start_pRoutineDecl -> RoutineDecl .                (rule 5)

	%eof           accept


State 47

	ListIdent -> Ident .                                (rule 28)
	ListIdent -> Ident . ',' ListIdent                  (rule 29)

	')'            reduce using rule 28
	','            shift, and enter state 66
	%eof           reduce using rule 28


State 48

	%start_pListIdent -> ListIdent .                    (rule 4)

	%eof           accept


State 49

	%start_pListExpr -> ListExpr .                      (rule 3)

	%eof           accept


State 50

	ListExpr -> Expr .                                  (rule 25)
	ListExpr -> Expr . ',' ListExpr                     (rule 26)
	Expr -> Expr . '<' Expr1                            (rule 59)
	Expr -> Expr . '>' Expr1                            (rule 60)
	Expr -> Expr . '<=' Expr1                           (rule 61)
	Expr -> Expr . '>=' Expr1                           (rule 62)
	Expr -> Expr . '==' Expr1                           (rule 63)
	Expr -> Expr . '!=' Expr1                           (rule 64)

	'!='           shift, and enter state 59
	')'            reduce using rule 25
	','            shift, and enter state 60
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'=='           shift, and enter state 63
	'>'            shift, and enter state 64
	'>='           shift, and enter state 65
	%eof           reduce using rule 25


State 51

	%start_pListStatement -> ListStatement .            (rule 2)

	%eof           accept


State 52

	ListStatement -> Statement .                        (rule 22)
	ListStatement -> Statement . ';' ListStatement      (rule 23)

	';'            shift, and enter state 58
	%eof           reduce using rule 22


State 53

	%start_pListDecl -> ListDecl .                      (rule 1)

	%eof           accept


State 54

	ListDecl -> Decl .                                  (rule 19)
	ListDecl -> Decl . ';' ListDecl                     (rule 20)

	';'            shift, and enter state 57
	'}'            reduce using rule 19
	%eof           reduce using rule 19


State 55

	%start_pAst -> Ast .                                (rule 0)

	%eof           accept


State 56

	Ast -> ListDecl .                                   (rule 17)

	%eof           reduce using rule 17


State 57

	ListDecl -> Decl ';' . ListDecl                     (rule 20)

	'def'          shift, and enter state 44
	'for'          shift, and enter state 38
	'if'           shift, and enter state 39
	'return'       shift, and enter state 45
	'while'        shift, and enter state 40
	'}'            reduce using rule 18
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 18

	Ident          goto state 36
	ListDecl       goto state 111
	RoutineDecl    goto state 41
	Decl           goto state 54
	Statement      goto state 43

State 58

	ListStatement -> Statement ';' . ListStatement      (rule 23)

	'for'          shift, and enter state 38
	'if'           shift, and enter state 39
	'while'        shift, and enter state 40
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 21

	Ident          goto state 36
	ListStatement  goto state 110
	Statement      goto state 52

State 59

	Expr -> Expr '!=' . Expr1                           (rule 64)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 109

State 60

	ListExpr -> Expr ',' . ListExpr                     (rule 26)

	'('            shift, and enter state 26
	')'            reduce using rule 24
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29
	%eof           reduce using rule 24

	Ident          goto state 17
	Integer        goto state 18
	ListExpr       goto state 108
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 50

State 61

	Expr -> Expr '<' . Expr1                            (rule 59)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 107

State 62

	Expr -> Expr '<=' . Expr1                           (rule 61)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 106

State 63

	Expr -> Expr '==' . Expr1                           (rule 63)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 105

State 64

	Expr -> Expr '>' . Expr1                            (rule 60)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 104

State 65

	Expr -> Expr '>=' . Expr1                           (rule 62)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 103

State 66

	ListIdent -> Ident ',' . ListIdent                  (rule 29)

	')'            reduce using rule 27
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 27

	Ident          goto state 47
	ListIdent      goto state 102

State 67

	Decl -> 'return' Expr .                             (rule 31)
	Expr -> Expr . '<' Expr1                            (rule 59)
	Expr -> Expr . '>' Expr1                            (rule 60)
	Expr -> Expr . '<=' Expr1                           (rule 61)
	Expr -> Expr . '>=' Expr1                           (rule 62)
	Expr -> Expr . '==' Expr1                           (rule 63)
	Expr -> Expr . '!=' Expr1                           (rule 64)

	'!='           shift, and enter state 59
	';'            reduce using rule 31
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'=='           shift, and enter state 63
	'>'            shift, and enter state 64
	'>='           shift, and enter state 65
	'}'            reduce using rule 31
	%eof           reduce using rule 31


State 68

	RoutineDecl -> 'def' Ident . '(' ListIdent ')' ':' '{' ListDecl '}'    (rule 30)

	'('            shift, and enter state 101


State 69

	Statement -> 'while' '(' . Expr ')' ':' '{' ListDecl '}'    (rule 36)

	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'not'          shift, and enter state 28
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 29

	Ident          goto state 17
	Integer        goto state 18
	Expr6          goto state 19
	Expr5          goto state 20
	Expr4          goto state 21
	Expr3          goto state 22
	Expr2          goto state 23
	Expr1          goto state 24
	Expr           goto state 100

State 70

	Statement -> 'if' Expr . ':' '{' ListDecl '}'       (rule 38)
	Statement -> 'if' Expr . ':' '{' ListDecl '}' ';' 'else' ':' '{' ListDecl '}'    (rule 39)
	Expr -> Expr . '<' Expr1                            (rule 59)
	Expr -> Expr . '>' Expr1                            (rule 60)
	Expr -> Expr . '<=' Expr1                           (rule 61)
	Expr -> Expr . '>=' Expr1                           (rule 62)
	Expr -> Expr . '==' Expr1                           (rule 63)
	Expr -> Expr . '!=' Expr1                           (rule 64)

	'!='           shift, and enter state 59
	':'            shift, and enter state 99
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'=='           shift, and enter state 63
	'>'            shift, and enter state 64
	'>='           shift, and enter state 65


State 71
